--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,12 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=commerce;Username=anonyme;Password=anonyme"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "Default": "Host=localhost;Database=commerce;Username=anonyme;Password=anonyme"
-  }
   "AllowedHosts": "*"
 }
