--- a/commerce.csproj
+++ b/commerce.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Commande\" />
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
