--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=commerce;Username=anonyme;Password=anonyme"
+    "DefaultConnection": "Host=localhost;Database=commerce;Username=anonyme;Password=anonyme"
   },
   "Logging": {
     "LogLevel": {
